Fix group row and delete cell alignment

--- a/static/frontary/pumpkin/theme.css
+++ b/static/frontary/pumpkin/theme.css
@@ -2536,6 +2536,17 @@ td.input-trash-can-delete.first-row div.input-trash-can-delete-outer {
     padding-top: 28px;
 }
 
+td.input-trash-can-delete.first-row.compact-group div.input-trash-can-delete-outer {
+    display: flex;
+    align-items: flex-start;
+    padding-top: 0;
+}
+
+td.input-trash-can-delete.first-row.compact-group {
+    padding-right: 0px;
+    width: 40px;
+}
+
 div.input-trash-can-delete-outer {
     width: 100%;
     height: 100%;
@@ -2574,6 +2585,17 @@ td.group-list-link-line-bottom {
     margin-top: calc((40px - 8px) / 2);
 }
 
+td.group-list-link-line-bottom.compact-group {
+    height: 13px;
+    width: 25px;
+    background-image: url(/frontary/pumpkin/bottom.svg);
+    background-size: 18px 11px;
+    left: 0px;
+    background-repeat: no-repeat;
+    margin-top: calc((40px - 8px) / 2);
+    position: relative;
+}
+
 td.group-list-link-cell {
     position: relative;
     padding: 0;
@@ -2602,6 +2624,19 @@ div.group-list-link-line-top.long {
     height: 91px;
     background-size: 15px 80px;
     background-image: url('/frontary/pumpkin/group-list-link-line-top-long.svg');
+}
+
+div.group-list-link-line-top.compact-group {
+    position: absolute;
+    display: block;
+    height: 58px;
+    width: 25px;
+    top: 0;
+    left: 0;
+    background-image: url(/frontary/pumpkin/top.svg);
+    background-size: 18px 67px;
+    background-repeat: no-repeat;
+    margin-top: calc((40px - 4px) / 2);
 }
 
 th.input-group-empty-header {
